# stickler

./: 404.html  index.html  objects.inv  pyproject.toml
.github/workflows/: lint.yaml  run_pytest.yaml  security.yaml  workflow.yml
Core-Concepts/: index.html
Core-Concepts/Classification_Logic/: index.html
Core-Concepts/Threshold_Gated_Recursive_Evaluation/: index.html
Core-Concepts/hungarian_matching_list_of_model/: index.html
Getting-Started/: index.html
Getting-Started/known-issues/: index.html
Guides/: index.html
Guides/StructuredModel_Advanced_Functionality/: index.html
Guides/StructuredModel_Dynamic_Creation/: index.html
Guides/StructuredModel_compare_with_README/: index.html
Guides/Universal_Aggregate_Field_Feature/: index.html
SDK-Docs/: index.html
SDK-Docs/api/: index.html
SDK-Docs/comparators/: index.html
SDK-Docs/evaluator/: index.html
SDK-Docs/models/: index.html
SDK-Docs/utils/: index.html
docs/docs/Guides/: StructuredModel_Dynamic_Creation.md
examples/scripts/: html_report_demo.py
search/: search_index.json
src/stickler/algorithms/: hungarian.py
src/stickler/structured_object_evaluator/: bulk_structured_model_evaluator.py
src/stickler/utils/: process_evaluation.py
tests/common/comparators/: test_llm.py
tests/reporting/: __init__.py
tests/reporting/html/: __init__.py  test_data_extractors.py  test_html_reporter.py  test_output_validation.py  test_report_config.py  test_section_generator.py  test_visualization_engine.py
tests/structured_object_evaluator/: test_performance_benchmark.py
(+11 files in other folders)
