[project]
name = "stickler-eval"
version = "0.1.3"
description = "Structured object comparison and evaluation library"
authors = [
    {name = "Spencer Romo", email = "sromo@amazon.com"},
    {name = "Ayushi Haria", email = "ayuharia@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.11.0",
    "rapidfuzz>=3.0.0",
    "munkres>=1.1.4",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.8.0",
    "pandas>=1.5.0",
    "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "beautifulsoup4>=4.14.2"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"
